--- a/MotivaTED/MotivaTED.csproj
+++ b/MotivaTED/MotivaTED.csproj
@@ -82,10 +82,33 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Band\Model\BasicsModel.cs" />
+    <Compile Include="Band\Model\MainModel.cs" />
+    <Compile Include="Band\Model\ModelBase.cs" />
+    <Compile Include="Band\Model\PageModelBase.cs" />
+    <Compile Include="Band\Model\StreamingModel.cs" />
+    <Compile Include="Band\Model\StreamingModel\HeartRate.cs" />
+    <Compile Include="Common\AppConfiguration.cs" />
+    <Compile Include="Common\SuspensionManager.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ObservableObjects\ObserverableObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\Delegate.cs" />
+    <Compile Include="Util\DisposableAction.cs" />
+    <Compile Include="Views\AgeSetupView.xaml.cs">
+      <DependentUpon>AgeSetupView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\BandSetupView.xaml.cs">
+      <DependentUpon>BandSetupView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\DeviceSetupView.xaml.cs">
+      <DependentUpon>DeviceSetupView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\HealthView.xaml.cs">
+      <DependentUpon>HealthView.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -94,6 +117,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Logo.scale-240.png" />
+    <Content Include="Assets\Navigation\Band-Button-1.png" />
+    <Content Include="Assets\Navigation\Exercise-Button.png" />
+    <Content Include="Assets\Navigation\Teddy-Button.png" />
     <Content Include="Assets\SmallLogo.scale-240.png" />
     <Content Include="Assets\SplashScreen.scale-240.png" />
     <Content Include="Assets\Square71x71Logo.scale-240.png" />
@@ -108,6 +134,27 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Styles\Styles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Page>
+    <Page Include="Views\AgeSetupView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\BandSetupView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\DeviceSetupView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\HealthView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
@@ -124,6 +171,13 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ArduinoBluetoothLibrary\ArduinoBluetoothLibrary\ArduinoBluetoothLibrary.csproj">
+      <Project>{5bfa1257-552f-4316-9bc1-fd246200a2ad}</Project>
+      <Name>ArduinoBluetoothLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
   </PropertyGroup>
